--- a/src/FrontOfficeBundle/Resources/views/Default/layout.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/layout.html.twig
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Ride sharing</title>
+    <link rel="stylesheet" href="{{ asset('css/covoit.css') }}">
   </head>
   <body>
     {% block content %}{% endblock %}
