--- a/src/FrontOfficeBundle/Resources/views/Default/layout.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/layout.html.twig
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Ride sharing</title>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.2/semantic.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Concert+One">
     <link rel="stylesheet" href="{{ asset('css/covoit.css') }}">
   </head>
   <body>
