--- a/src/FrontOfficeBundle/Resources/views/Default/index.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/index.html.twig
@@ -2,6 +2,6 @@
 {% block content %}
 Hello World from front office !
 {% for voiture in voitures %}
-    id : {{ voiture.id }}, voiture : {{ voiture.voiture }}, nb_places : {{ voiture.nb_places }}
+    id : {{ voiture.id }}, voiture : {{ voiture.voiture }}, nb_places : {{ voiture.nbPlaces }}
 {% endfor %}
 {% endblock %}
