--- a/src/FrontOfficeBundle/Resources/views/Default/index.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/index.html.twig
@@ -2,6 +2,6 @@
 {% block content %}
 Liste :<br>
 {% for trajet in trajets %}
-    id : <a href="{{ trajet.id }}">{{ trajet.id }}</a>
+    id : <a href="/{{ trajet.id }}">{{ trajet.id }}</a>
 {% endfor %}
 {% endblock %}
