--- a/src/FrontOfficeBundle/Resources/views/Default/layout.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/layout.html.twig
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="{{ asset('css/covoit.css') }}">
   </head>
   <body>
+    <h2 class="ui header">
+      <img class="ui image" src="{{ asset('images/ride_sharing.png')}}">
+      <div class="content">
+        RIDE SHARING
+      </div>
+    </h2>
     {% block content %}{% endblock %}
   </body>
 </html>
