--- a/src/FrontOfficeBundle/Resources/views/Default/layout.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/layout.html.twig
@@ -10,11 +10,7 @@
     <link rel="stylesheet" href="{{ asset('css/covoit.css') }}">
   </head>
   <body>
-    <h1 class="ui horizontal divider header">
-      <img class="ui image" src="{{ asset('images/ride_sharing.png')}}">
-      Description
-    </h1>
-    <h2 class="ui header">
+    <h2 id="titre" class="ui header">
       <img class="ui image" src="{{ asset('images/ride_sharing.png')}}">
       <div class="content">
         RIDE SHARING
