--- a/src/FrontOfficeBundle/Resources/views/Default/index.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/index.html.twig
@@ -8,7 +8,7 @@
         <i class="search icon"></i> -->
         {{ form_start(form) }}
         {{ form_widget(form) }}
-        {{ form_end(form) }}
+        <i class="fa">{{ form_end(form) }}</i>
       </div>
     </div>
     <table class="ui selectable celled table">
