--- a/src/FrontOfficeBundle/Resources/views/Default/index.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/index.html.twig
@@ -7,8 +7,9 @@
         <!-- <input class="prompt" type="text" placeholder="Common passwords...">
         <i class="search icon"></i> -->
         {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <i class="fa">{{ form_end(form) }}</i>
+        {{ form_widget(form.search, { 'attr': {'class': 'prompt'} }) }}
+        {{ form_widget(form.submit, { 'attr': {'class': 'search icon'} }) }}
+        {{ form_end(form) }}
       </div>
     </div>
     <table class="ui selectable celled table">
