--- a/src/FrontOfficeBundle/Resources/views/Default/layout.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/layout.html.twig
@@ -12,9 +12,11 @@
   <body>
     <h2 id="titre" class="ui header">
       <img class="ui image" src="{{ asset('images/ride_sharing.png')}}">
-      <div class="content">
-        RIDE SHARING
-      </div>
+      <a href="/">
+        <div class="content">
+          RIDE SHARING
+        </div>
+      </a>
     </h2>
     {% block content %}{% endblock %}
   </body>
