--- a/src/FrontOfficeBundle/Resources/views/Default/details.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/details.html.twig
@@ -4,11 +4,12 @@
   <div class="content">
     <i class="right floated fas fa-car"></i>
     <div class="header">
-      Trajet
+      Trajet {{ infos.id}}
     </div>
     <div class="meta">
-      Date<span class="rigth floated">km</span>
+      {{ infos.date }}
     </div>
+    <span class="rigth floated">{{ infos.nbKm }}</span>
     <div class="description">
       Internaute
     </div>
