--- a/src/FrontOfficeBundle/Resources/views/Default/details.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/details.html.twig
@@ -7,7 +7,7 @@
       Trajet {{ infos.id}}
     </div>
     <div class="meta">
-      {{ infos.date }}
+      date
     </div>
     <span class="rigth floated">{{ infos.nbKm }}</span>
     <div class="description">
