--- a/src/FrontOfficeBundle/Resources/views/Default/details.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/details.html.twig
@@ -4,12 +4,12 @@
   <div class="content">
     <i class="right floated fas fa-car"></i>
     <div class="header">
-      Trajet {{ infos.id}}
+      Trajet
     </div>
     <div class="meta">
       date
     </div>
-    <span class="rigth floated">{{ infos.nbKm }}</span>
+    <span class="rigth floated"></span>
     <div class="description">
       Internaute
     </div>
