--- a/src/FrontOfficeBundle/Resources/views/Default/details.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/details.html.twig
@@ -7,22 +7,25 @@
       Trajet {{ infos.id }}
     </div>
     <div class="meta">
-      {{ infos.date|date("m/d/Y") }}
+      {{ infos.date|date("m/d/Y H:i:s") }}
     </div>
-    <span class="rigth floated">{{ infos.nbKm }}</span>
+    <span class="right floated">{{ infos.nbKm }}</span>
     <div class="description">
-      {{ internaute.prenom }} {{ internaute.prenom }}
+      {{ internaute.prenom }} {{ internaute.nom }}<br>
+      Tél : {{ internaute.tel }}<br>
+      Mail : {{ internaute.mail }}
     </div>
   </div>
   <div class="extra content">
-    {{ internaute.voitureId.voiture }}
+    Voiture {{ internaute.voitureId.voiture }}<br>
+    Nombre de places : {{ internaute.voitureId.nbPlaces }}
   </div>
   <div class="extra content">
     <span class="right floated">
-      {{ infos.depart }}
+      Arrivée : {{ infos.arrivee }}
     </span>
     <span>
-      {{ infos.arrivee }}
+      Départ : {{ infos.depart }}
     </span>
   </div>
 </div>
