--- a/src/FrontOfficeBundle/Resources/views/Default/details.html.twig
+++ b/src/FrontOfficeBundle/Resources/views/Default/details.html.twig
@@ -1,6 +1,7 @@
 {% extends 'FrontOfficeBundle:Default:layout.html.twig' %}
 {% block content %}
 <main class="ui container">
+  <div class="ui hidden divider"></div>
   <section class="ui raised segment">
     <div class="ui fluid card">
       <div class="content">
