--- a/app/Resources/views/ville/index.html.twig
+++ b/app/Resources/views/ville/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'FrontOfficeBundle:Default:layout.html.twig' %}
 
 {% block body %}
     <h1>Villes list</h1>
