--- a/app/Resources/views/ville/index.html.twig
+++ b/app/Resources/views/ville/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'FrontOfficeBundle:Default:layout.html.twig' %}
 
-{% block body %}
+{% block content %}
     <h1>Villes list</h1>
 
     <table>
