--- a/app/Resources/views/ville/show.html.twig
+++ b/app/Resources/views/ville/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'BackOfficeBundle:Default:layout.html.twig' %}
 
 {% block content %}
     <h1>Ville</h1>
