--- a/src/BackOfficeBundle/Resources/views/Default/layout.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Default/layout.html.twig
@@ -14,7 +14,7 @@
       <h2 id="titre" class="ui header">
         <img class="ui image" src="{{ asset('images/ride_sharing.png')}}">
           <div class="content">
-            RIDE SHARING<span class="rigth floated">ADMIN</span>
+            RIDE SHARING<span class="right floated">ADMIN</span>
           </div>
       </h2>
     </a>
