--- a/src/BackOfficeBundle/Resources/views/Default/layout.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Default/layout.html.twig
@@ -14,8 +14,9 @@
       <h2 id="titre" class="ui header">
         <img class="ui image" src="{{ asset('images/ride_sharing.png')}}">
           <div class="content">
-            RIDE SHARING<span class="right floated">ADMIN</span>
+            RIDE SHARING
           </div>
+          <span class="right floated">ADMIN</span>
       </h2>
     </a>
     {% block content %}{% endblock %}
