--- a/src/BackOfficeBundle/Resources/views/Default/layout.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Default/layout.html.twig
@@ -14,9 +14,8 @@
       <h2 id="titre" class="ui header">
         <img class="ui image" src="{{ asset('images/ride_sharing.png')}}">
           <div class="content">
-            RIDE SHARING
+            RIDE SHARING ADMIN
           </div>
-          <span class="right floated">ADMIN</span>
       </h2>
     </a>
     {% block content %}{% endblock %}
