--- a/src/BackOfficeBundle/Resources/views/Default/layout.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Default/layout.html.twig
@@ -18,6 +18,7 @@
           </div>
       </h2>
     </a>
+    {% include 'BackOfficeBundle:Default:navbar.html.twig' %}
     {% block content %}{% endblock %}
   </body>
   <footer>
