--- a/src/BackOfficeBundle/Resources/views/Default/navbar.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Default/navbar.html.twig
@@ -1,6 +1,7 @@
-<div class="ui four item menu">
+<div class="ui five item menu">
   <a class="item" href="/adminbo">Accueil Admin</a>
   <a class="item" href="/adminbo/voiture">Voiture</a>
   <a class="item" href="/adminbo/ville">Ville</a>
+  <a class="item" href="/adminbo/internaute">Internaute</a>
   <a class="item" href="/adminbo/stats">Statistiques</a>
 </div>
