--- a/app/Resources/views/internaute/edit.html.twig
+++ b/app/Resources/views/internaute/edit.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'BackOfficeBundle:Default:layout.html.twig' %}
 
-{% block body %}
+{% block content %}
     <h1>Internaute edit</h1>
 
     {{ form_start(edit_form) }}
