--- a/src/BackOfficeBundle/Resources/views/Default/stats.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Default/stats.html.twig
@@ -12,4 +12,12 @@
     </div>
   </div>
 </div>
+<div class="ui card">
+  <div class="content">
+    <span class="header">Nombre d'internautes à plus de 2 trajets</span>
+    <div class="description">
+      {{ nb_internaute_trajet_2 }}
+    </div>
+  </div>
+</div>
 {% endblock %}
