--- a/src/BackOfficeBundle/Resources/views/Default/stats.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Default/stats.html.twig
@@ -16,7 +16,7 @@
   <div class="content">
     <span class="header">Nombre d'internautes à plus de 2 trajets</span>
     <div class="description">
-      {{ nb_internaute_trajet_2 }}
+      {{ dump(nb_internaute_trajet_2) }}
     </div>
   </div>
 </div>
