--- a/src/BackOfficeBundle/Resources/views/Default/stats.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Default/stats.html.twig
@@ -1,23 +1,29 @@
 {% extends 'BackOfficeBundle:Default:layout.html.twig' %}
 {% block content %}
-<h4 class="ui horizontal divider header">
-  <i class="bar chart icon"></i>
-  Statistiques
-</h4>
-<div class="ui card">
-  <div class="content">
-    <span class="header">Nombre d'internautes</span>
-    <div class="description">
-      {{ nb_internaute }}
+<main class="ui container">
+  <section class="ui raised segment">
+    <div class="ui grid">
+      <h4 class="ui horizontal divider header">
+        <i class="bar chart icon"></i>
+        Statistiques
+      </h4>
+      <div class="ui card four wide column">
+        <div class="content">
+          <span class="header">Nombre d'internautes</span>
+          <div class="description">
+            {{ nb_internaute }}
+          </div>
+        </div>
+      </div>
+      <div class="ui card four wide column">
+        <div class="content">
+          <span class="header">Nombre d'internautes à plus de 2 trajets</span>
+          <div class="description">
+            {{ nb_internaute_trajet_2 }}
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-<div class="ui card">
-  <div class="content">
-    <span class="header">Nombre d'internautes à plus de 2 trajets</span>
-    <div class="description">
-      {{ dump(nb_internaute_trajet_2) }}
-    </div>
-  </div>
-</div>
+  </section>
+</main>
 {% endblock %}
