--- a/src/BackOfficeBundle/Resources/views/Default/index.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,11 @@
 {% extends 'BackOfficeBundle:Default:layout.html.twig' %}
 {% block content %}
-Hello World from back office !
+<main class="ui container">
+  <section class="ui raised segment">
+    <h2 class="ui horizontal divider header">
+      <i class="database icon"></i>
+      Interface admin
+    </h2>
+  </section>
+</main>
 {% endblock %}
