--- a/src/BackOfficeBundle/Resources/views/Default/stats.html.twig
+++ b/src/BackOfficeBundle/Resources/views/Default/stats.html.twig
@@ -7,35 +7,43 @@
       Statistiques
     </h4>
     <div class="ui grid">
-      <div class="ui card four wide column">
-        <div class="content">
-          <span class="header">Nombre d'internautes</span>
-          <div class="description">
-            {{ nb_internaute }}
+      <div class="four wide column">
+        <div class="ui card">
+          <div class="content">
+            <span class="header">Nombre d'internautes</span>
+            <div class="description">
+              {{ nb_internaute }}
+            </div>
           </div>
         </div>
       </div>
-      <div class="ui card four wide column">
-        <div class="content">
-          <span class="header">Nombre d'internautes à plus de 2 trajets</span>
-          <div class="description">
-            {{ dump(nb_internaute_trajet_2) }}
+      <div class="four wide column">
+        <div class="ui card">
+          <div class="content">
+            <span class="header">Nombre d'internautes à plus de 2 trajets</span>
+            <div class="description">
+              {{ dump(nb_internaute_trajet_2) }}
+            </div>
           </div>
         </div>
       </div>
-      <div class="ui card four wide column">
-        <div class="content">
-          <span class="header">Top 5 villes de départs</span>
-          <div class="description">
-            {{ dump(top_depart) }}
+      <div class="four wide column">
+        <div class="ui card">
+          <div class="content">
+            <span class="header">Top 5 villes de départs</span>
+            <div class="description">
+              {{ dump(top_depart) }}
+            </div>
           </div>
         </div>
       </div>
-      <div class="ui card four wide column">
-        <div class="content">
-          <span class="header">Top 5 villes d'arrivées</span>
-          <div class="description">
-            {{ dump(top_arrivee) }}
+      <div class="four wide column">
+        <div class="ui card">
+          <div class="content">
+            <span class="header">Top 5 villes d'arrivées</span>
+            <div class="description">
+              {{ dump(top_arrivee) }}
+            </div>
           </div>
         </div>
       </div>
