--- a/app/Resources/views/voiture/new.html.twig
+++ b/app/Resources/views/voiture/new.html.twig
@@ -1,7 +1,10 @@
 {% extends 'BackOfficeBundle:Default:layout.html.twig' %}
 
 {% block content %}
-    <h1>Voiture creation</h1>
+    <h1 class="ui horizontal divider header">
+      <i class="car icon"></i>
+      Création Voiture
+    </h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
