--- a/app/Resources/views/voiture/show.html.twig
+++ b/app/Resources/views/voiture/show.html.twig
@@ -1,9 +1,12 @@
 {% extends 'BackOfficeBundle:Default:layout.html.twig' %}
 
 {% block content %}
-    <h1>Voiture</h1>
+    <h1 class="ui horizontal divider header">
+      <i class="car icon"></i>
+      Voiture
+    </h1>
 
-    <table>
+    <table class="ui selectable celled table">
         <tbody>
             <tr>
                 <th>Id</th>
