--- a/app/Resources/views/ville/index.html.twig
+++ b/app/Resources/views/ville/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Villes list</h1>
 
-    <table>
+    <table class="ui selectable celled table">
         <thead>
             <tr>
                 <th>Id</th>
