--- a/app/Resources/views/voiture/edit.html.twig
+++ b/app/Resources/views/voiture/edit.html.twig
@@ -1,7 +1,10 @@
 {% extends 'BackOfficeBundle:Default:layout.html.twig' %}
 
 {% block content %}
-    <h1>Voiture edit</h1>
+    <h1 class="ui horizontal divider header">
+      <i class="car icon"></i>
+      Edition Voiture
+    </h1>
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
