--- a/app/Resources/views/voiture/index.html.twig
+++ b/app/Resources/views/voiture/index.html.twig
@@ -36,5 +36,5 @@
         </tbody>
     </table>
 
-    <a class="ui primary button" href="{{ path('voiture_new') }}">Create a new voiture</a>
+    <a class="ui primary button rigth aligned" href="{{ path('voiture_new') }}">Create a new voiture</a>
 {% endblock %}
