--- a/app/Resources/views/voiture/index.html.twig
+++ b/app/Resources/views/voiture/index.html.twig
@@ -38,7 +38,7 @@
       </tbody>
     </table>
 
-    <a class="ui primary button" href="{{ path('voiture_new') }}">Create a new voiture</a>
+    <a class="ui primary button" href="{{ path('voiture_new') }}">Créer une voiture</a>
   </section>
 </main>
 {% endblock %}
