--- a/app/Resources/views/voiture/show.html.twig
+++ b/app/Resources/views/voiture/show.html.twig
@@ -1,31 +1,35 @@
 {% extends 'BackOfficeBundle:Default:layout.html.twig' %}
 
 {% block content %}
+<main class="ui container">
+  <section class="ui raised segment">
     <h1 class="ui horizontal divider header">
       <i class="car icon"></i>
       Voiture
     </h1>
 
     <table class="ui selectable celled table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ voiture.id }}</td>
-            </tr>
-            <tr>
-                <th>Voiture</th>
-                <td>{{ voiture.voiture }}</td>
-            </tr>
-            <tr>
-                <th>Nbplaces</th>
-                <td>{{ voiture.nbPlaces }}</td>
-            </tr>
-        </tbody>
+      <tbody>
+        <tr>
+          <th>Id</th>
+          <td>{{ voiture.id }}</td>
+        </tr>
+        <tr>
+          <th>Voiture</th>
+          <td>{{ voiture.voiture }}</td>
+        </tr>
+        <tr>
+          <th>Nbplaces</th>
+          <td>{{ voiture.nbPlaces }}</td>
+        </tr>
+      </tbody>
     </table>
 
     <a class="ui primary button" href="{{ path('voiture_index') }}">Retourner à la liste</a>
-    <a href="{{ path('voiture_edit', { 'id': voiture.id }) }}">Edition</a>
+    <a class="ui primary button" href="{{ path('voiture_edit', { 'id': voiture.id }) }}">Edition</a>
     {{ form_start(delete_form) }}
-        <input type="submit" value="Supprimer">
+    <input class="prompt" type="submit" value="Supprimer">
     {{ form_end(delete_form) }}
+  </section>
+</main>
 {% endblock %}
