--- a/app/Resources/views/voiture/show.html.twig
+++ b/app/Resources/views/voiture/show.html.twig
@@ -28,7 +28,7 @@
     <a class="ui primary button" href="{{ path('voiture_index') }}">Retourner à la liste</a>
     <a class="ui primary button" href="{{ path('voiture_edit', { 'id': voiture.id }) }}">Edition</a>
     {{ form_start(delete_form) }}
-    <input class="ui red rigth floated button" type="submit" value="Supprimer">
+    <input class="ui red right floated button" type="submit" value="Supprimer">
     {{ form_end(delete_form) }}
   </section>
 </main>
