--- a/app/Resources/views/voiture/new.html.twig
+++ b/app/Resources/views/voiture/new.html.twig
@@ -10,7 +10,7 @@
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
-    <input type="submit" value="Creer" />
+    <input class="ui primary button" type="submit" value="Creer" />
     {{ form_end(form) }}
 
     <a class="ui primary button" href="{{ path('voiture_index') }}">Retourner à la liste</a>
