--- a/app/Resources/views/voiture/edit.html.twig
+++ b/app/Resources/views/voiture/edit.html.twig
@@ -10,19 +10,13 @@
 
     {{ form_start(edit_form) }}
     {{ form_widget(edit_form) }}
-    <input type="submit" value="Edition" />
+    <input class="ui primary button" type="submit" value="Edition" />
     {{ form_end(edit_form) }}
 
-    <ul>
-      <li>
-        <a href="{{ path('voiture_index') }}">Retourner à la liste</a>
-      </li>
-      <li>
-        {{ form_start(delete_form) }}
-        <input type="submit" value="Supprimer">
-        {{ form_end(delete_form) }}
-      </li>
-    </ul>
+    <a class="ui primary button" href="{{ path('voiture_index') }}">Retourner à la liste</a>
+    {{ form_start(delete_form) }}
+    <input class="ui red button" type="submit" value="Supprimer">
+    {{ form_end(delete_form) }}
   </section>
 </main>
 {% endblock %}
