--- a/app/Resources/views/voiture/edit.html.twig
+++ b/app/Resources/views/voiture/edit.html.twig
@@ -10,17 +10,19 @@
     {{ form_start(edit_form) }}
     {{ form_widget(edit_form) }}
     <div class="ui grid">
-      <div class="four wide column">
+      <div class="six wide column">
         <input class="fluid ui primary button" type="submit" value="Edition" />
         {{ form_end(edit_form) }}
       </div>
-      <div class="four wide column">
+      <div class="six wide column">
         <a class="fluid ui primary button" href="{{ path('voiture_index') }}">Retourner à la liste</a>
       </div>
 
-      {{ form_start(delete_form) }}
-      <input class="ui red right floated button" type="submit" value="Supprimer">
-      {{ form_end(delete_form) }}
+      <div class="right floated">
+        {{ form_start(delete_form) }}
+        <input class="ui red button" type="submit" value="Supprimer">
+        {{ form_end(delete_form) }}
+      </div>
     </div>
   </section>
 </main>
