--- a/app/Resources/views/voiture/edit.html.twig
+++ b/app/Resources/views/voiture/edit.html.twig
@@ -9,6 +9,7 @@
     </h1>
     {{ form_start(edit_form) }}
     {{ form_widget(edit_form) }}
+    <div class="ui hidden divider"></div>
     <div class="ui grid">
       <div class="six wide column">
         <input class="fluid ui primary button" type="submit" value="Edition" />
@@ -17,8 +18,7 @@
       <div class="six wide column">
         <a class="fluid ui primary button" href="{{ path('voiture_index') }}">Retourner à la liste</a>
       </div>
-
-      <div class="right floated">
+      <div class="four wide column">
         {{ form_start(delete_form) }}
         <input class="ui red button" type="submit" value="Supprimer">
         {{ form_end(delete_form) }}
