--- a/app/Resources/views/voiture/edit.html.twig
+++ b/app/Resources/views/voiture/edit.html.twig
@@ -12,7 +12,7 @@
     <div class="ui hidden divider"></div>
     <div class="ui grid">
       <div class="six wide column">
-        <input class="fluid ui primary button" type="submit" value="Edition" />
+        <input class="fluid ui primary button" type="submit" value="Editer" />
         {{ form_end(edit_form) }}
       </div>
       <div class="six wide column">
